--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -173,29 +173,6 @@
     </div>
   </div>
   
-  <div class="sponsor6 box p-lg-5 p-md-5 p-sm-5">
-    <div class="container">
-      <p class="h1">Our Partners</p>
-      <div class="s2 gap-4">
-        <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Goldy Solar</p>
-          <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
-            <br>
-            <br>
-            Situated across the Sai Baba Temple in Unn Village, Navsari, India, Uday Palace Navsari, a member of
-            Radisson Individuals, enjoys easy accessibility via the main roadway leading into Navsari. If arriving by
-            taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
-            at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
-            you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
-        </div>
-        <div class="row img col-lg-6 col-md-6 col-12">
-          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/goldi.png">
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Partners</p>
@@ -215,6 +192,30 @@
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
             traveling by car, parking facilities are available on-site.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="sponsor6 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="h1">Our Partners</p>
+      <div class="s2 gap-4">
+        <div class="row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Goldy Solar</p>
+          <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
+            <br>
+            <br>
+            Situated across the Sai Baba Temple in Unn Village, Navsari, India, Uday Palace Navsari, a member of
+            Radisson Individuals, enjoys easy accessibility via the main roadway leading into Navsari. If arriving by
+            taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
+            at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
+            you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
+            traveling by car, parking facilities are available on-site.</p>
+        </div>
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/goldi.png">
         </div>
       </div>
     </div>
@@ -272,7 +273,7 @@
       <p class="h1">Our Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">Specta Look</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -285,7 +286,7 @@
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/ajay.png">
+            src="/assests/img/specta.png">
         </div>
       </div>
     </div>
