--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -104,7 +104,7 @@
   </div>
   <div class="sponsor3 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Partners</p>
+      <p class="h1">Our Marketing Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
@@ -128,7 +128,7 @@
   
   <div class="sponsor4 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Partners</p>
+      <p class="h1">Our Fashion Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">The Real Value</p>
@@ -175,7 +175,7 @@
 
   <div class="sponsor6 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Partners</p>
+      <p class="h1">Our Green Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">Goldy Solar</p>
@@ -199,7 +199,7 @@
   
   <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Partners</p>
+      <p class="h1">Our City Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
@@ -225,7 +225,7 @@
   
   <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Partners</p>
+      <p class="h1">Our Music Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">Crazy Beats</p>
@@ -248,7 +248,7 @@
   </div>
   <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Partners</p>
+      <p class="h1">Our Lunch Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
@@ -272,7 +272,7 @@
   
   <div class="sponsor10 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Partners</p>
+      <p class="h1">Our Eye's Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">Specta Look</p>
