--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -73,27 +73,28 @@
             taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            traveling by car, parking facilities are available on-site.
+          </p>
         </div>
       </div>
     </div>
   </div>
-  
+
   <div class="sponsor2 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Food Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">Ajay's Cafe</p>
-          <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
+          <p class="d-flex text-capitalize fs-5">We are a trusted and leading QSR chain with over 160+ Outlets and 42
+            Cities as on 15th February 2024. We are on a mission to serve food that is good, Delicious and accessible to
+            all.
             <br>
             <br>
-            Situated across the Sai Baba Temple in Unn Village, Navsari, India, Uday Palace Navsari, a member of
-            Radisson Individuals, enjoys easy accessibility via the main roadway leading into Navsari. If arriving by
-            taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
-            at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
-            you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            We are a team of young and energetic professionals who believe that passion, dedication and commitment can
+            help you achieve your dreams, we believe that success is not a destination but a journey. At Ajay’s we enjoy
+            our journey of delivering hygienic and pocket-friendly cold coffee, varieties of burgers and Pizzas.
+          </p>
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
@@ -112,35 +113,42 @@
         </div>
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">Marketing Solver</p>
-          <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
+          <p class="d-flex text-capitalize fs-5">In today's fast-paced business landscape, where trends evolve at
+            lightning speed and competition is fierce, the value of forging enduring partnerships cannot be overstated.
+            At marketingsolver.in, we firmly believe that cultivating long-term relationships with our clients,
+            suppliers, and stakeholders is fundamental to mutual success and sustained growth.
             <br>
             <br>
-            Situated across the Sai Baba Temple in Unn Village, Navsari, India, Uday Palace Navsari, a member of
-            Radisson Individuals, enjoys easy accessibility via the main roadway leading into Navsari. If arriving by
-            taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
-            at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
-            you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            At marketingsolver.in we are driven by a shared commitment to value creation. We believe that by focusing on
+            long-term partnerships, we can unlock new opportunities, mitigate risks, and adapt to changing market
+            dynamics more effectively. Whether it's through joint product development, strategic alliances, or shared
+            resources, we are dedicated to maximizing the value we deliver to our partners and helping them achieve
+            their long-term objectives.
+          </p>
         </div>
       </div>
     </div>
   </div>
-  
+
   <div class="sponsor4 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Fashion Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">The Real Value</p>
-          <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
+          <p class="d-flex text-capitalize fs-5">Welcome to Real Value, where fashion meets affordability without
+            compromising on quality. At Real Value, we believe everyone deserves to look and feel their best, regardless
+            of budget. Our carefully curated collections feature the latest trends and timeless classics, ensuring
+            there's something for every style and occasion. From casual wear to formal attire, our diverse range of
+            clothing is designed to cater to all ages, genders, and tastes.
             <br>
             <br>
-            Situated across the Sai Baba Temple in Unn Village, Navsari, India, Uday Palace Navsari, a member of
-            Radisson Individuals, enjoys easy accessibility via the main roadway leading into Navsari. If arriving by
-            taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
-            at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
-            you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            Our commitment to excellence extends beyond our products to our customer service. At Real Value, we strive
+            to create a seamless shopping experience, both online and in-store. Our knowledgeable staff is always ready
+            to assist with personalized fashion advice, ensuring you find the perfect outfit every time. Discover the
+            true meaning of value with us – stylish, high-quality clothing at prices that won't break the bank. Thank
+            you for choosing Real Value, where your satisfaction is our top priority.
+          </p>
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
@@ -167,7 +175,8 @@
             taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            traveling by car, parking facilities are available on-site.
+          </p>
         </div>
       </div>
     </div>
@@ -187,7 +196,8 @@
             taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            traveling by car, parking facilities are available on-site.
+          </p>
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
@@ -196,7 +206,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our City Partners</p>
@@ -215,14 +225,15 @@
             taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            traveling by car, parking facilities are available on-site.
+          </p>
         </div>
       </div>
     </div>
   </div>
 
-  
-  
+
+
   <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Music Partners</p>
@@ -237,7 +248,8 @@
             taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            traveling by car, parking facilities are available on-site.
+          </p>
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
@@ -264,12 +276,13 @@
             taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            traveling by car, parking facilities are available on-site.
+          </p>
         </div>
       </div>
     </div>
   </div>
-  
+
   <div class="sponsor10 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Eye's Partners</p>
@@ -284,7 +297,8 @@
             taxi, you can conveniently reach our hotel. The Surat International Airport is the nearest airport, located
             at a distance of approximately an hour’s drive. In case you choose to travel by the city’s railway network,
             you can reach our hotel from the station in about 30 minutes, subject to traffic conditions. For those
-            traveling by car, parking facilities are available on-site.</p>
+            traveling by car, parking facilities are available on-site.
+          </p>
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
