--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -58,20 +58,10 @@
   <h1 class="name">SIGNIFICANCE OF AVSAR EVENTS</h1>
   <!-- -----------------------------------------------company---------------------------------------------------------------- -->
   <div class="company">
-
-    <div class="about-gif">
-      <img src="/assests/img/aboutpg.gif" alt="">
-      <img src="/assests/img/ramzat-pg.gif" alt="">
+    <div class="img">
+      <img src="/assests/img/Avsar-logo.png" alt="" />
     </div>
-
-    <div class="ramzat-gif">
-
-    </div>
-
-    <!-- <div class="img">
-      <img src="img/avsarevents-logo.png" alt="" />
-    </div> -->
-    <!-- <div class="company-info">
+    <div class="company-info">
       <span>EVENTS <span class="our">FOR EVERYONE</span></span>
       <p>
         One of the most well known dandiya event in <b>Navsari</b> is the <b>Avsar Events Garba.</b> Of the several good
@@ -84,7 +74,7 @@
 
       ​<br><br>
 
-      <p class="rampara">
+      <p>
         The money that is raised from this event is given to charitable trusts and organizations all across the city. It
         takes place in <b>ramzaat 2024,</b> <b>Z Farm</b> every year and you need to book your tickets well in advance.
         They have their very own Instagram page and also a website that you can contact for bookings. This event has
@@ -98,12 +88,16 @@
         this good cause at least and do your bit. <b>Avsar Events Garba Festival</b> is best garba and dandiya in
         Navsari.
       </p>
+    </div>
 
-      <div class="img ramzat">
-        <img src="img/Ramzat.png" alt="" />
-      </div>
-    </div> -->
+    
   </div>
+
+  <div class="about-gif">
+    <img src="/assests/img/aboutpg.gif" alt="">
+    <img src="/assests/img/ramzat-pg.gif" alt="">
+  </div>
+
   <!-- ---------------------------------------------------------------------------------------------------------------------- -->
   <!-- ----------------------------------------------------team-------------------------------------------------------------- -->
   <div class="team">
