--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -142,84 +142,87 @@
   </div>
 
   <!-- ----------------------------------------------------Sponsore-------------------------------------------------------------- -->
-  <div class="sponsor">
+  <!-- <div class="sponsor">
     <span>OUR <span class="ourspons">SPONSORS</span></span>
   </div>
   <div class="sponscontainer">
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/election.jpg" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Marketing Solver</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/NAVSARI.png" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Navsari360</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/images (1).png" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Buddy's</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/jp.png" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">J. P. Biscuite</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/goldy.jpg" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Goldy Solar</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/real (2).jpg" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Real Value</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/crazy.jpg" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Crazy Beats</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/ajay.jpeg" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Ajay's Cafe</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img bg-primary-subtle p-2" src="/assests/img/uday.png" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role">Uday Palace</span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role"></span>
     </div>
 
     <div class="spons-card">
       <img class="spons-img" src="/assests/img/" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+      <h5 class="head-name">John Smith</h5>
       <span class="role"></span>
     </div>
 
     <div class="spons-card">
       <img class="card-img" src="/assests/img/" alt="">
-      <!-- <h5 class="head-name">John Smith</h5> -->
+    <h5 class="head-name">John Smith</h5>
       <span class="role"></span>
     </div>
-  </div>
+  </div> -->
 
   <!-- ----------------------------------------------------Venue-------------------------------------------------------------- -->
+  <div class="sponsor">
+    <span>OUR <span class="ourspons">VENUE</span></span>
+  </div>
   <div class="venue">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4420.738911712684!2d72.93429967583938!3d20.91980469151083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be0f7004c5f20f1%3A0xc50d807cd0acb0c8!2sZ%20Farm!5e1!3m2!1sen!2sin!4v1717760987545!5m2!1sen!2sin"
