--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -54,7 +54,7 @@
       </div>
     </div>
   </nav>
-
+  <div class="container-background">
   <h1 class="name">SIGNIFICANCE OF AVSAR EVENTS</h1>
   <!-- -----------------------------------------------company---------------------------------------------------------------- -->
   <div class="company">
@@ -100,6 +100,7 @@
 
   <!-- ---------------------------------------------------------------------------------------------------------------------- -->
   <!-- ----------------------------------------------------team-------------------------------------------------------------- -->
+  
   <div class="team">
     <span>OUR <span class="ourtm">MEMBERS</span></span>
   </div>
@@ -139,6 +140,16 @@
       <h5 class="head-name">John Smith</h5>
       <span class="role">Manager</span>
     </div>
+  </div>
+
+  <div class="sponsor">
+    <span>OUR <span class="ourspons">VENUE</span></span>
+  </div>
+  <div class="venue">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4420.738911712684!2d72.93429967583938!3d20.91980469151083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be0f7004c5f20f1%3A0xc50d807cd0acb0c8!2sZ%20Farm!5e1!3m2!1sen!2sin!4v1717760987545!5m2!1sen!2sin"
+      width="600" height="450" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 
   <!-- ----------------------------------------------------Sponsore-------------------------------------------------------------- -->
@@ -218,17 +229,9 @@
       <span class="role"></span>
     </div>
   </div> -->
-
+</div>
   <!-- ----------------------------------------------------Venue-------------------------------------------------------------- -->
-  <div class="sponsor">
-    <span>OUR <span class="ourspons">VENUE</span></span>
-  </div>
-  <div class="venue">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4420.738911712684!2d72.93429967583938!3d20.91980469151083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be0f7004c5f20f1%3A0xc50d807cd0acb0c8!2sZ%20Farm!5e1!3m2!1sen!2sin!4v1717760987545!5m2!1sen!2sin"
-      width="600" height="450" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
+  
 
 
   <!-- ----------------------------------------footer------------------------------------------ -->
