--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <li class="nav-item">
             <a class="nav-link" href="assests/pages/sponsors.html">SPONSORS</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/assests/pages/contact.html">CONTACTS</a>
+          </li>
         </ul>
         <a class="button type1 mb-lg-auto m-auto" href="assests/pages/booking.html">
           <span class="btn-txt">Get Pass</span>
