changes in about

--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -62,7 +62,7 @@
   <!-- -----------------------------------------------company---------------------------------------------------------------- -->
   <div class="company">
     <div class="img">
-      <img src="/assests/img/Avsar-logo.png" alt="" />
+      <img class="about-img" src="/assests/img/Avsar-logo.png" alt="" />
     </div>
     <div class="company-info">
       <span>EVENTS <span class="our">FOR EVERYONE</span></span>
