--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -137,6 +137,7 @@
         <div class="media-icons">
           <a target="on_blank" href="https://www.facebook.com/share/hYZhNgkgVBdCk1dS/?mibextid=qi2Omg"><i class="fab fa-facebook"></i></a>
           <a target="on_blank" href="https://www.instagram.com/pico_india/"><i class="fab fa-instagram"></i></a>
+          <a target="on_blank" href=""><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
 
