--- a/assests/pages/contact.html
+++ b/assests/pages/contact.html
@@ -109,7 +109,7 @@
                             class="fab fa-facebook"></i></a>
                     <a target="on_blank" href="https://www.instagram.com/avsar__events9/"><i
                             class="fab fa-instagram"></i></a>
-                    <a target="on_blank" href=""><i class="fab fa-whatsapp"></i></a>
+                    <a target="on_blank" href="https://api.whatsapp.com/send/?phone=9998460101&text&type=phone_number&app_absent=0"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
 
