--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -322,7 +322,7 @@
           <a target="on_blank" href="https://www.facebook.com/share/hYZhNgkgVBdCk1dS/?mibextid=qi2Omg"><i
               class="fab fa-facebook"></i></a>
           <a target="on_blank" href="https://www.instagram.com/pico_india/"><i class="fab fa-instagram"></i></a>
-          <a target="on_blank" href=""><i class="fab fa-whatsapp"></i></a>
+          <a target="on_blank" href="https://api.whatsapp.com/send/?phone=9998460101&text&type=phone_number&app_absent=0"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
 
