--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -247,7 +247,7 @@
 
       <div class="bottom-details">
         <div class="bottom_text">
-          <span class="copyright_text">Copyright © 2024 <a href="#">avasrevents.in</a></span>
+          <span class="copyright_text">Copyright © 2024 <a href="https://www.avsarevents.in/">avasrevents.in</a></span>
         </div>
       </div>
   </footer>
