--- a/index.html
+++ b/index.html
@@ -285,8 +285,6 @@
       </div>
     </div>
   </div>
-
-
   <!-- ----------------------------------------footer------------------------------------------ -->
   <footer>
     <div class="content">
@@ -302,10 +300,9 @@
         </div>
       </div>
 
-
       <div class="bottom-details">
         <div class="bottom_text">
-          <span class="copyright_text">Copyright © 2024 <a href="#">avasrevents.in</a></span>
+          <span class="copyright_text">Copyright © 2024 <a href="https://www.avsarevents.in/">avasrevents.in</a></span>
         </div>
       </div>
   </footer>
