--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <a target="on_blank" href="https://www.facebook.com/share/hYZhNgkgVBdCk1dS/?mibextid=qi2Omg"><i
               class="fab fa-facebook"></i></a>
           <a target="on_blank" href="https://www.instagram.com/avsar__events9?igsh=MW5xY3AzdDBnZ2Rhaw=="><i class="fab fa-instagram"></i></a>
-          <a target="on_blank" href="https://api.whatsapp.com/send/?phone=9998460101&text&type=phone_number&app_absent=0"><i class="fab fa-whatsapp"></i></a>
+          <a target="on_blank" href="https://wa.me/9998460101"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
 
