changes in sponsers

--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -66,7 +66,7 @@
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
             src="/assests/img/uday.png">
         </div>
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Uday Palace</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
@@ -87,7 +87,7 @@
     <div class="container">
       <p class="h1">Our Food Partners</p>
       <div class="s2 gap-4">
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Ajay's Cafe</p>
           <p class="d-flex text-capitalize fs-5">We are a trusted and leading QSR chain with over 160+ Outlets and 42
             Cities as on 15th February 2024. We are on a mission to serve food that is good, Delicious and accessible to
@@ -114,7 +114,7 @@
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
             src="/assests/img/white logo.png">
         </div>
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Marketing Solver</p>
           <p class="d-flex text-capitalize fs-5">In today's fast-paced business landscape, where trends evolve at
             lightning speed and competition is fierce, the value of forging enduring partnerships cannot be overstated.
@@ -137,7 +137,7 @@
     <div class="container">
       <p class="h1">Our Fashion Partners</p>
       <div class="s2 gap-4">
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">The Real Value</p>
           <p class="d-flex text-capitalize fs-5">Welcome to Real Value, where fashion meets affordability without
             compromising on quality. At Real Value, we believe everyone deserves to look and feel their best, regardless
@@ -168,7 +168,7 @@
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
             src="/assests/img/jp.png">
         </div>
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">J. P. Biscuit Bakery</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
@@ -189,7 +189,7 @@
     <div class="container">
       <p class="h1">Our Green Partners</p>
       <div class="s2 gap-4">
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Goldy Solar</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
@@ -218,7 +218,7 @@
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
             src="/assests/img/NAVSARI.png">
         </div>
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Navsari360</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
@@ -241,7 +241,7 @@
     <div class="container">
       <p class="h1">Our Music Partners</p>
       <div class="s2 gap-4">
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Crazy Beats</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
@@ -269,7 +269,7 @@
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
             src="/assests/img/buddy.png">
         </div>
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Buddy's</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
@@ -290,7 +290,7 @@
     <div class="container">
       <p class="h1">Our Eye's Partners</p>
       <div class="s2 gap-4">
-        <div class="row content col-lg-6 col-md-6 col-12">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
           <p class="h2">Specta Look</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
