--- a/assests/pages/Booking.html
+++ b/assests/pages/Booking.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="container-fluid">
     <div class="booking position-absolute top-50 start-50 translate-middle">
         <div class="align-items-center">
             <div class="heading">
@@ -31,6 +32,7 @@
             </button>
         </div>
     </div>
+</div>
 </body>
 
 <script>
